[package]
name = "async-embedded-sdmmc"
description = "Embedded sdmmc driver with async support"
license = "MIT OR Apache-2.0"
version = "0.3.1"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2024"
repository = "https://github.com/qiuchengxuan/async-sdmmc"

[dependencies]
bitfield = "0.13"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-timers = "0.4"
defmt = { version = "1.0", optional = true }
nb = "1.0"

[dev-dependencies]
hex-literal = "0.3"

[features]
default = []
defmt = ["dep:defmt"]